Fix: overflow hidden in description tab button

--- a/css/style.css
+++ b/css/style.css
@@ -778,6 +778,8 @@ img {
   font-size: 14px;
   line-height: 20px;
   display: inline-block;
+  height: 40px;
+  overflow: hidden;
 }
 
 .burger-modal {
