--- a/sass/blocks/main/_header.sass
+++ b/sass/blocks/main/_header.sass
@@ -238,6 +238,8 @@
       +Lato(14px)
       line-height: 20px
       display: inline-block
+      height: 40px
+      overflow: hidden
 
 .burger-modal
   display: none
